[#362] Make the GPML logo resizable and fix overflow issue

--- a/frontend/src/modules/about/styles.scss
+++ b/frontend/src/modules/about/styles.scss
@@ -20,6 +20,7 @@
 
   .section-container {
     padding: 4rem 0;
+    overflow: hidden;
   }
 
   // Section Issue
